--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
             border-collapse: collapse;
             background-color: aquamarine;
         }
-    </style>
+    </style>rowspan dekat td
