--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <table>
         <tr text-align: center>
-            <th colspan="3"><img src="banner.png" height="500px" width="1500px"></th>
+            <th BANNER ></th>
         </tr>
         <tr>
             <th>MENU</th> 
